--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "google/apiclient": "^2.12.1",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2",
-        "google/apiclient": "^2.12.1",
+        "league/html-to-markdown": "^5.1",
         "phpmailer/phpmailer": "^6.5"
     },
     "require-dev": {
