--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "@aponahmed/dombuilder": "^1.0.6"
+        "@aponahmed/dombuilder": "^1.0.6",
+        "@google/generative-ai": "^0.3.1"
     }
 }
