--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@aponahmed/dombuilder": "^1.0.6",
+        "@aponahmed/notify": "^1.0.3",
         "@aponahmed/tooltip": "^0.0.9",
         "@google/generative-ai": "^0.3.1"
     }
